1. add tag support 2. add category support 3. add entry page for all tags & categories 4. add site search support 5. make container width from 700px to 800px

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ db.json
 node_modules/
 public/
 .deploy*/
+.idea
+/source/.sass-cache/
+/source/scss/_partial/*.css.map
+/source/scss/_partial/*.css
+
+/source/css/*.css.map
+/source/scss/*.css
+/source/scss/*.css.map
