--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,20 @@
 menu:
     Blog: /
     Archive: /archives/
-    Weibo: http://weibo.com/sunchongsheng
-    GitHub: https://github.com/pinggod
-    Rss: /atom.xml
-
+    Tag: /tags/
+    GitHub: https://github.com/zhouhao
+    RSS: /atom.xml
 favicon: /favicon.png
-logo: /favicon.png
+logo: /logo.png
 
 # Comment
 # e.g disqus: seansun
-disqus:
-duoshuo:
+disqus: 
 cloudTie:
 
 # Analytics
 # google-analytics:
-ga: UA-65933410-1
+ga: UA-39886095-1
 
-# Copyright Infomation
+# Copyright Information
 startyear: 2015
